--- a/default.css
+++ b/default.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Open+Sans+Condensed:wght@300&family=Rampart+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito:wght@300&family=Open+Sans+Condensed:wght@300&family=Rampart+One&display=swap");
 
 #title {
   text-align: center;
@@ -13,7 +13,7 @@
   margin-left: 15%;
   margin-right: 15%;
   margin-bottom: 50px;
-  font-family: "Open Sans Condensed", Arial;
+  font-family: "Nunito", Arial;
 }
 
 .texters {
