--- a/default.css
+++ b/default.css
@@ -5,6 +5,7 @@
   font-size: 50px;
   font-family: "Rampart One", Arial;
   font-weight: normal;
+  /* filter: drop-shadow(0px 20px 2px black); */
 }
 
 #description {
