--- a/default.css
+++ b/default.css
@@ -5,6 +5,7 @@
   font-size: 50px;
   font-family: "Rampart One", Arial;
   font-weight: normal;
+  /* box-shadow: 0px 5px 5px; */
   /* filter: drop-shadow(0px 20px 2px black); */
 }
 
@@ -18,8 +19,8 @@
 }
 
 .texters {
-  width: 160px;
-  height: 120px;
+  width: 175px;
+  height: 175px;
 }
 
 .texters-table {
