added vibe and invite beginning

--- a/default.css
+++ b/default.css
@@ -59,6 +59,11 @@
   font-size: 14px;
 }
 
+#vibe-options {
+  font-family: "Nunito", Arial;
+  font-size: 14px;
+}
+
 input[type="text"] {
   font-family: "Nunito", Arial;
   font-size: 14px;
