--- a/default.css
+++ b/default.css
@@ -74,6 +74,11 @@
   font-size: 14px;
 }
 
+#preview-text {
+  font-family: "Nunito", Arial;
+  font-size: 14px;
+}
+
 input[type="text"] {
   font-family: "Nunito", Arial;
   font-size: 14px;
