--- a/default.css
+++ b/default.css
@@ -57,16 +57,19 @@
 #byob-options {
   font-family: "Nunito", Arial;
   font-size: 14px;
+  border-radius: 5px;
 }
 
 #vibe-options {
   font-family: "Nunito", Arial;
   font-size: 14px;
+  border-radius: 5px;
 }
 
 #invite-options {
   font-family: "Nunito", Arial;
   font-size: 14px;
+  border-radius: 5px;
 }
 
 #preview-table {
