--- a/default.css
+++ b/default.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
 #title {
   text-align: center;
-  font-size: 50px;
+  font-size: 60px;
   font-family: "Rampart One", Arial;
   font-weight: normal;
   /* box-shadow: 0px 5px 5px; */
@@ -51,7 +51,7 @@
 
 .table-labels {
   font-family: "Patua One", Arial;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 #byob-options {
@@ -123,4 +123,8 @@ input[type="text"] {
 
 #preview-label {
   font-size: 18px;
+}
+
+#share-table {
+  margin-left: 13vw;
 }
