changed to apple font

--- a/default.css
+++ b/default.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito:wght@300&family=Open+Sans+Condensed:wght@300&family=Rampart+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
+@font-face {
+  font-family: "San Francisco";
+  src: url(/src/fonts/SFUIDisplay/SFUIDisplay-Semibold.otf);
+}
 #title {
   text-align: center;
   font-size: 60px;
@@ -55,7 +59,7 @@
 }
 
 #byob-options {
-  font-family: "Nunito", Arial;
+  font-family: "San Francisco", Arial;
   font-size: 14px;
   border-radius: 5px;
   background-color: #3ba3fc;
@@ -63,31 +67,32 @@
 }
 
 #vibe-options {
-  font-family: "Nunito", Arial;
+  font-family: "San Francisco", Arial;
   font-size: 14px;
   border-radius: 5px;
   background-color: #e5e5ec;
 }
 
 #invite-options {
-  font-family: "Nunito", Arial;
+  font-family: "San Francisco", Arial;
   font-size: 14px;
   border-radius: 5px;
   background-color: #e5e5ec;
 }
 
-#preview-table {
-  font-family: "Nunito", Arial;
-  font-size: 14px;
-}
-
 #preview-text {
-  font-family: "Nunito", Arial;
+  font-family: "San Francisco", Arial;
   font-size: 14px;
+  background-color: #e5e5ec;
 }
 
 input[type="text"] {
-  font-family: "Nunito", Arial;
+  font-family: "San Francisco", Arial;
+  font-size: 14px;
+}
+
+input[type="datetime-local"] {
+  font-family: "San Francisco", Arial;
   font-size: 14px;
 }
 
@@ -123,8 +128,9 @@ input[type="text"] {
 
 #preview-label {
   font-size: 18px;
+  width: 10vw;
 }
 
 #share-table {
-  margin-left: 13vw;
+  margin-left: 12.5vw;
 }
