--- a/default.css
+++ b/default.css
@@ -176,3 +176,9 @@ input[type="datetime-local"] {
   font-weight: bold;
   font-size: 18px;
 }
+
+#watermark {
+  text-align: right;
+  font-family: "Rampart One", Arial;
+  font-size: 18px;
+}
