--- a/default.css
+++ b/default.css
@@ -195,3 +195,16 @@ input[type="datetime-local"] {
   font-family: "Rampart One", Arial;
   text-align: right;
 }
+
+#hidden-image {
+  background-color: #3ba3fc;
+  width: 350px;
+  height: 350px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 28px;
+  font-family: "Boogaloo", Arial;
+  font-weight: bolder;
+  color: white;
+  position: relative;
+}
